src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Owner.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Loan_Close_Lost_Reason__c</fullName>
        <label>Click Loan Close Lost Reason</label>
        <picklist>
            <controllingField>Click_Loan_Stage__c</controllingField>
            <picklistValues>
                <fullName>Closed Lost - Competitive Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Not servicing / Out of Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Wrong Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Click_Loan_Stage__c</fullName>
        <label>Click Loan Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted - In Progress - Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feed_Comment_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feed Comment check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Contact_Date__c</fullName>
        <description>Future date to contact client</description>
        <label>Future Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Show_Campaign_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show Campaign Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Show_Campaign_Status__c</fullName>
        <label>No Show Campaign Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempting Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Language Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Has Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Renting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Owns Outright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Over 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Out of Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Competitive Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Financed Already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - No Finance Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Recently Refinanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Show_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIsMobileVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Mobile Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfPassword__c</fullName>
        <description>Click Loans</description>
        <label>Password</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vhc__CallFile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CallFile</label>
        <referenceTo>vhc__Campaign__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vhc__TimeZone__c</fullName>
        <label>TimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>(UTC-12:00) International Date Line West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-11:00) Coordinated Universal Time-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-10:00) Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-09:00) Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-08:00) Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-08:00) Pacific Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Chihuahua, La Paz, Mazatlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Mountain Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Central Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Guadalajara, Mexico City, Monterrey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Saskatchewan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Bogota, Lima, Quito</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Eastern Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Indiana (East)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:30) Caracas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Asuncion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Atlantic Time (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Cuiaba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Georgetown, La Paz, Manaus, San Juan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Santiago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:30) Newfoundland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Brasilia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Buenos Aires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Cayenne, Fortaleza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Greenland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Montevideo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-02:00) Coordinated Universal Time-02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>acf_Lead__pc</columns>
        <columns>Click_Loan_Stage__c</columns>
        <columns>clickLead_Status__pc</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>acfEconsent__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Click_Refi</value>
        </filters>
        <label>Click Loans Accounts</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Accounts_Future_Leads_Mine</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>acf_Lead__pc</columns>
        <columns>clickLead_Status__pc</columns>
        <columns>Click_Loan_Stage__c</columns>
        <columns>Future_Contact_Date__c</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>acfEconsent__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Click_Refi</value>
        </filters>
        <filters>
            <field>clickLead_Status__pc</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>contains</operation>
            <value>Future</value>
        </filters>
        <label>4 CL - Future Leads (Mine)</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Accounts_In_Progres_Mine</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>acf_Lead__pc</columns>
        <columns>clickLead_Status__pc</columns>
        <columns>Click_Loan_Stage__c</columns>
        <columns>Future_Contact_Date__c</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>acfEconsent__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Click_Refi</value>
        </filters>
        <filters>
            <field>clickLead_Status__pc</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>contains</operation>
            <value>Progress</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Future</value>
        </filters>
        <label>3 CL - In Progress (Mine)</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Accounts_New_Mine</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>acf_Lead__pc</columns>
        <columns>clickLead_Status__pc</columns>
        <columns>Click_Loan_Stage__c</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>acfEconsent__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Click_Refi</value>
        </filters>
        <filters>
            <field>clickLead_Status__pc</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>No Answer</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Contacted</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Dashboard</value>
        </filters>
        <label>1 CL - New (Mine)</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Accounts_Open</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>acf_Lead__pc</columns>
        <columns>clickLead_Status__pc</columns>
        <columns>Click_Loan_Stage__c</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>acfEconsent__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Click_Refi</value>
        </filters>
        <filters>
            <field>clickLead_Status__pc</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Click Loans Accounts - Open</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Accounts_Open_Mine</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>acf_Lead__pc</columns>
        <columns>clickLead_Status__pc</columns>
        <columns>Click_Loan_Stage__c</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>acfEconsent__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Click_Refi</value>
        </filters>
        <filters>
            <field>clickLead_Status__pc</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Click Loans Accounts - Open (Mine)</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Accounts_Openeconsent</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>acf_Lead__pc</columns>
        <columns>clickLead_Status__pc</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>acfEconsent__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Click_Refi</value>
        </filters>
        <filters>
            <field>clickLead_Status__pc</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>acfEconsent__pc</field>
            <operation>equals</operation>
            <value>I Consent</value>
        </filters>
        <label>Click Loans Accounts - E-Consent</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Accounts_Uncontacte_Mine</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>acf_Lead__pc</columns>
        <columns>Click_Loan_Stage__c</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>acfEconsent__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Click_Refi</value>
        </filters>
        <filters>
            <field>clickLead_Status__pc</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Click_Loan_Stage__c</field>
            <operation>contains</operation>
            <value>No Answer</value>
        </filters>
        <label>2 CL - Uncontacted (Mine)</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>No_Show_Campaign_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>No_Show_Campaign_Status__c</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>No_Show_Campaign_Account__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Show_Campaign_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>No_Show_Phone__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>No Show Campaign Account</label>
    </listViews>
    <listViews>
        <fullName>Phone_No_show_campaign</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>No_Show_Campaign_Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>PC_PHONE3</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>No_Show_Phone__c</columns>
        <columns>No_Show_Campaign_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Show_Campaign_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>No_Show_Phone__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Phone - No show campaign</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>We must have 1 active Business Account &quot;Do Not Delete&quot;</description>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Force_Mobile_Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( Contains ( &quot;+61&quot;,
Left(PersonMobilePhone, 3)))</errorConditionFormula>
        <errorMessage>Please check mobile number on the Lead
Phone and Mobile Numbers must be entered as +61xxxxxxxxx</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Force_Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( Contains ( &quot;+61&quot;, 
Left(Phone, 3)))</errorConditionFormula>
        <errorMessage>Please check the Phone number on the Lead 
Phone and Mobile Numbers must be entered as +61xxxxxxxxx</errorMessage>
    </validationRules>
</CustomObject>